converted remaining icon-shield to globes on nav bar. also changed links to be dark on greywrap and corrected their layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -338,6 +338,10 @@ a:after {
 	margin-bottom: 10px;
 }
 
+#greywrap a {
+    color: #555555;
+}
+
 #footerwrap {
 	background: #2b2b2b;
 	margin-top: 0px;
